# ml

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/mento/: test.ipynb
src/ml/: db.py  main.py  test.ipynb  utils.py
