[project]
name = "ml"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = [
    "konlpy>=0.6.0",
    "gensim>=4.3.3",
    "scikit-learn>=1.6.0",
    "pymongo>=4.10.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
