[project]
name = "ml"
version = "0.2.0"
description = "This is ML for Recommender System"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = [
    "konlpy>=0.6.0",
    "gensim>=4.3.3",
    "scikit-learn>=1.6.0",
    "pymongo>=4.10.1",
    "pytz>=2024.2",
    "dotenv>=0.0.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
